--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
         </div>
         <div class="col-1"></div>
       </div>
+      <p>
+        <a href="https://github.com/cmmsnow/weather-app/">Open-source code</a>
+        by Christine Murphy
+      </p>
     </div>
     <script src="script.js"></script>
   </body>
