Edited the placement and style of the git link

--- a/index.html
+++ b/index.html
@@ -110,9 +110,14 @@
         <div class="col-1"></div>
       </div>
     </div>
-    <p>
-      <a href="https://github.com/cmmsnow/weather-app/">Open-source code</a>
-      by Christine Murphy
+    <p class="github-footer">
+      <a
+        href="https://github.com/cmmsnow/weather-app/"
+        target="blank"
+        class="github-link"
+        >Open-source code</a
+      >
+      by Christine Snow
     </p>
     <script src="script.js"></script>
   </body>
