Updated "humidity" to accurate info

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
       <div class="row">
         <div class="col-4">
           <h2>
-            <span id="current-day">Thurs </span
-            ><span id="current-time">16:30</span><br /><span id="main-city"
-              >New York</span
-            ><br /><span class="temperature" id="main-temp">83˚</span
+            <span id="current-day">🙃 </span><span id="current-time">🙃</span
+            ><br /><span id="main-city">🙃</span><br /><span
+              class="temperature"
+              id="main-temp"
+              >🙃˚</span
             ><span id="temp-change"
               ><a href="#" id="fahrenheit">F</a> |
               <a href="#" id="celcius">C</a></span
@@ -69,7 +70,11 @@
           <h1>⛅️</h1>
         </div>
         <div class="col-4">
-          <h3>Partly cloudy<br />70% humidity<br />Winds 2mph</h3>
+          <h3>
+            <span id="description">Partly cloudy</span><br /><span id="humidity"
+              >🙃</span
+            >% humidity<br />Winds 2mph
+          </h3>
         </div>
       </div>
       <div class="row">
