Updated "description" to accurate info

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
         </div>
         <div class="col-4">
           <h3>
-            <span id="description">Partly cloudy</span><br /><span id="humidity"
-              >🙃</span
-            >% humidity<br />Winds 2mph
+            <span id="description">🙃</span><br /><span id="humidity">🙃</span>%
+            humidity<br />Winds 2mph
           </h3>
         </div>
       </div>
