Updated "wind" to accurate info

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="col-4">
           <h3>
             <span id="description">🙃</span><br /><span id="humidity">🙃</span>%
-            humidity<br />Winds 2mph
+            humidity<br />Winds <span id="wind">🙃</span>mph
           </h3>
         </div>
       </div>
