--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
+          <p class="day-and-time">
+            <span id="current-day">🙃 </span><span id="current-time">🙃</span>
+          </p>
           <div class="input-group mb-3">
             <input
               type="text"
@@ -55,8 +58,7 @@
       <div class="row">
         <div class="col-4">
           <h2>
-            <span id="current-day">🙃 </span><span id="current-time">🙃</span
-            ><br /><span id="main-city">🙃</span><br /><span
+            <span id="main-city">🙃</span><br /><span
               class="temperature"
               id="main-temp"
               >🙃˚</span
