Added "last updated:" & simplified showWeather function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       <div class="row">
         <div class="col-12">
           <p class="day-and-time">
-            <span id="current-day">🙃 </span><span id="current-time">🙃</span>
+            Last updated: <span id="current-day">🙃 </span
+            ><span id="current-time">🙃</span>
           </p>
           <div class="input-group mb-3">
             <input
