Working on moving day/time

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
   </head>
 
   <body>
+    <p class="day-and-time">
+      Last updated <span id="current-day">🙃 </span
+      ><span id="current-time">🙃</span>
+    </p>
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <p class="day-and-time">
-            Last updated: <span id="current-day">🙃 </span
-            ><span id="current-time">🙃</span>
-          </p>
           <div class="input-group mb-3">
             <input
               type="text"
@@ -117,6 +117,10 @@
         <div class="col-1"></div>
       </div>
     </div>
+    <p class="day-and-time">
+      Last updated <span id="current-day">🙃 </span
+      ><span id="current-time">🙃</span>
+    </p>
     <p class="github-footer">
       <a
         href="https://github.com/cmmsnow/weather-app/"
