Moved and resized day & time

--- a/index.html
+++ b/index.html
@@ -19,10 +19,6 @@
   </head>
 
   <body>
-    <p class="day-and-time">
-      Last updated <span id="current-day">🙃 </span
-      ><span id="current-time">🙃</span>
-    </p>
     <div class="container">
       <div class="row">
         <div class="col-12">
@@ -56,6 +52,10 @@
           </div>
         </div>
       </div>
+      <p class="day-and-time">
+        Updated <span id="current-day">🙃 </span
+        ><span id="current-time">🙃</span>
+      </p>
       <div class="row">
         <div class="col-4">
           <h2>
@@ -117,10 +117,6 @@
         <div class="col-1"></div>
       </div>
     </div>
-    <p class="day-and-time">
-      Last updated <span id="current-day">🙃 </span
-      ><span id="current-time">🙃</span>
-    </p>
     <p class="github-footer">
       <a
         href="https://github.com/cmmsnow/weather-app/"
