--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="input-group mb-3">
+          <form id="search-form" class="input-group mb-3">
             <input
               type="text"
               class="form-control form"
@@ -49,7 +49,7 @@
                 current spot📍
               </button>
             </div>
-          </div>
+          </form>
         </div>
       </div>
       <p class="day-and-time">
