Completed unit conversion celsius/fahrenheit

--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
             <span id="main-city">🙃</span><br /><span
               class="temperature"
               id="main-temp"
-              >🙃˚</span
+              >🙃</span
             ><span id="temp-change"
-              ><a href="#" id="fahrenheit">F</a> |
+              ><a href="#" id="fahrenheit" class="active">F</a> |
               <a href="#" id="celcius">C</a></span
             >
           </h2>
