Updated main icon to live info

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
           </h2>
         </div>
         <div class="col-4">
-          <h1>⛅️</h1>
+          <img src="" alt="" id="icon" class="" />
         </div>
         <div class="col-4">
           <h3>
