Added live 3 hr forecast

--- a/index.html
+++ b/index.html
@@ -79,43 +79,7 @@
           </h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-1"></div>
-        <div class="col-2">
-          <p>
-            <span class="day">Sun</span><br /><span class="small-emoji"
-              >⛅️</span
-            ><br />73˚/89˚
-          </p>
-        </div>
-        <div class="col-2">
-          <p>
-            <span class="day">Mon</span><br /><span class="small-emoji">☀️</span
-            ><br />73˚/92˚
-          </p>
-        </div>
-        <div class="col-2">
-          <p>
-            <span class="day">Tues</span><br /><span class="small-emoji"
-              >☀️</span
-            ><br />73˚/91˚
-          </p>
-        </div>
-        <div class="col-2">
-          <p>
-            <span class="day">Wed</span><br /><span class="small-emoji">🌩</span
-            ><br />73˚/89˚
-          </p>
-        </div>
-        <div class="col-2">
-          <p>
-            <span class="day">Thurs</span><br /><span class="small-emoji"
-              >🌩</span
-            ><br />73˚/87˚
-          </p>
-        </div>
-        <div class="col-1"></div>
-      </div>
+      <div class="row" id="forecast"></div>
     </div>
     <p class="github-footer">
       <a
